# fastapi-ultimate-crud

./: .gitignore  README.md  pyproject.toml
src/: app.py  schemas.py
tests/: test_app.py
